# VRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VRenderer.sln  VRenderer.vcxproj  VRenderer.vcxproj.filters  vcpkg-configuration.json  vcpkg.json  vcpkgInstallFirstTime.bat
TracyCaptures/: ResizingBug.tracy
include/: Renderer.hpp  VulkanCmdsRecordFirst.hpp  VulkanCommandbufferReset.hpp  VulkanDescriptorSetAllocator.hpp  VulkanDescriptorSetLayoutFactory.hpp  VulkanError.hpp  VulkanFoundationalElements.hpp  VulkanQueue.hpp  VulkanQueueGraphics.hpp  VulkanResourceManager.hpp  VulkanSubmissionSync.hpp  VulkanSwapchain.hpp  VulkanSwapchainAndPresentSync.hpp  VulkanTexture.hpp
include/SceneDataGenerator/: Material.hpp  Node.hpp  SceneData.hpp  SceneDataGenerator.hpp
include/SceneDataGenerator/GeometryData/: Mesh.hpp  Vertex.hpp
include/VRenderer/: Logger.hpp  Renderer.hpp  SDL_WindowWrapper.hpp  SynchronizationRequest.hpp  VulkanResourceManager.hpp  VulkanSetLayoutAndPipelineLayoutGeneratorFromSPIRV.hpp
include/VRenderer/Logger/: Category.hpp  Level.hpp  Logger.hpp  (+2 more)
include/VulkanCommandRecorders/: IVulkanCommandRecorder.hpp  VulkanAllGraphicsRecorder.hpp  VulkanComputeRecorder.hpp  VulkanEmptyComputeRecorder.hpp  VulkanGraphicsRecorder.hpp
include/VulkanUtils/: VulkanUtils.cpp  VulkanUtils.hpp
manual-dependencies/SPIRV-Reflect/: spirv_reflect.h
shaders/: RectangleTriangleVert.vert  TriangleVert.vert  compileAll.bat
shaders/SPIRV-CompiledShaders/: RectangleTriangleVert.spv  Sky.spv  TriangleVert.spv
src/: Renderer.cpp  SDL_WindowWrapper.cpp  VulkanCommandbufferReset.cpp  VulkanDescriptorSetAllocator.cpp  VulkanDescriptorSetLayoutFactory.cpp  VulkanError.cpp  VulkanFoundationalElements.cpp  VulkanResourceManager.cpp  VulkanSwapchain.cpp  VulkanSwapchainAndPresentSync.cpp  VulkanTexture.cpp  VulkanTimelineSemaphore.cpp  main.cpp
src/SceneDataGenerator/: SceneData.cpp  SceneDataGenerator.cpp
src/VRenderer/: Renderer.cpp  SDL_WindowWrapper.cpp  VulkanResourceManager.cpp  VulkanSetLayoutAndPipelineLayoutGeneratorFromSPIRV.cpp  main.cpp
src/VulkanCommandRecorders/: VulkanAllGraphicsRecorder.cpp  VulkanComputeRecorder.cpp  VulkanEmptyComputeRecorder.cpp  VulkanGraphicsRecorder.cpp
src/VulkanUtils/: VulkanUtils.cpp
(+37 files in other folders)
